Add platform independent window class

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=658,105
+Pos=53,433
 Size=550,680
 Collapsed=0
 
 [Window][Test Window]
-Pos=37,107
-Size=603,232
+Pos=45,136
+Size=459,285
+Collapsed=0
+
+[Window][Test Win32Window]
+Pos=60,60
+Size=131,54
 Collapsed=0
 
