Fix a few bugs, and switch RenderSystem to be entity based instead of actor based

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=53,433
-Size=550,680
+Pos=0,38
+Size=818,1063
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Test Window]
 Pos=45,136
@@ -14,7 +15,46 @@ Size=459,285
 Collapsed=0
 
 [Window][Test Win32Window]
-Pos=60,60
-Size=131,54
+Pos=0,1103
+Size=818,932
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][Example: Auto-resizing window]
+Pos=616,163
+Size=703,588
+Collapsed=0
+
+[Window][Example: Console]
+Pos=594,125
+Size=678,644
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=558,278
+Size=1158,932
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=3840,2035
+Collapsed=0
+
+[Window][Game Viewport]
+Pos=820,38
+Size=3020,1997
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Example: Custom rendering]
+Pos=927,346
+Size=1543,1009
+Collapsed=0
+
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=818,1997 Split=Y Selected=0xE927CF2F
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1136,1063 Selected=0xE927CF2F
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1136,932 Selected=0x94FA6F2C
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=3020,1997 CentralNode=1 Selected=0xAE7BB42F
 
