--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/vendor/imgui"]
 	path = src/vendor/imgui
-	url = https://github.com/ocornut/imgui
+	url = https://github.com/ocornut/imgui/tree/docking
