Switch render system to be fully ECS, and make complete dynamic batching

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,13 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=452,130
+Size=898,899
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,38
-Size=818,1063
+Size=817,514
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][Test Window]
 Pos=45,136
@@ -15,10 +15,10 @@ Size=459,285
 Collapsed=0
 
 [Window][Test Win32Window]
-Pos=0,1103
-Size=818,932
+Pos=0,554
+Size=817,487
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Example: Auto-resizing window]
 Pos=616,163
@@ -37,14 +37,14 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2035
+Size=1904,1041
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=820,38
-Size=3020,1997
+Pos=819,38
+Size=1085,1003
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Example: Custom rendering]
 Pos=927,346
@@ -52,9 +52,9 @@ Size=1543,1009
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=818,1997 Split=Y Selected=0xE927CF2F
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1136,1063 Selected=0xE927CF2F
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1136,932 Selected=0x94FA6F2C
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=3020,1997 CentralNode=1 Selected=0xAE7BB42F
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=1904,1003 Split=X Selected=0xAE7BB42F
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=817,1997 Split=Y Selected=0xE927CF2F
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=817,1025 Selected=0xE927CF2F
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=817,970 Selected=0x94FA6F2C
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3021,1997 CentralNode=1 Selected=0xAE7BB42F
 
