Made scene heirarchy window

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=452,130
+Pos=429,1022
 Size=898,899
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,38
-Size=817,514
+Size=812,869
 Collapsed=0
 DockId=0x00000003,0
 
@@ -15,8 +15,8 @@ Size=459,285
 Collapsed=0
 
 [Window][Test Win32Window]
-Pos=0,554
-Size=817,487
+Pos=0,909
+Size=812,516
 Collapsed=0
 DockId=0x00000004,0
 
@@ -37,12 +37,12 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1904,1041
+Size=3840,2035
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=819,38
-Size=1085,1003
+Pos=511,38
+Size=3329,1997
 Collapsed=0
 DockId=0x00000002,0
 
@@ -51,10 +51,31 @@ Pos=927,346
 Size=1543,1009
 Collapsed=0
 
+[Window][Image]
+Pos=845,278
+Size=1034,241
+Collapsed=0
+
+[Window][Inspector]
+Pos=0,840
+Size=509,1195
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Scene]
+Pos=0,38
+Size=509,800
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=1904,1003 Split=X Selected=0xAE7BB42F
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=817,1997 Split=Y Selected=0xE927CF2F
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=817,1025 Selected=0xE927CF2F
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=817,970 Selected=0x94FA6F2C
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3021,1997 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X Selected=0xAE7BB42F
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=509,1997 Split=Y Selected=0xF02CD328
+    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=816,800 Selected=0x18B8C0DE
+    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=816,1195 Selected=0xF02CD328
+  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=3329,1997 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=812,1997 Split=Y Selected=0xE927CF2F
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=817,869 Selected=0xE927CF2F
+      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=817,1126 Selected=0x94FA6F2C
+    DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=3026,1997 CentralNode=1 Selected=0xAE7BB42F
 
