--- a/imgui.ini
+++ b/imgui.ini
@@ -1,81 +1,48 @@
-[Window][Debug##Default]
-Pos=429,1022
-Size=898,899
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=0,38
-Size=812,869
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Test Window]
-Pos=45,136
-Size=459,285
-Collapsed=0
-
-[Window][Test Win32Window]
-Pos=0,909
-Size=812,516
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Example: Auto-resizing window]
-Pos=616,163
-Size=703,588
-Collapsed=0
-
-[Window][Example: Console]
-Pos=594,125
-Size=678,644
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=558,278
-Size=1158,932
-Collapsed=0
-
 [Window][DockSpace Demo]
 Pos=0,0
 Size=3840,2035
 Collapsed=0
 
+[Window][Scene]
+Pos=0,38
+Size=655,1087
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
+
 [Window][Game Viewport]
-Pos=511,38
-Size=3329,1997
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Example: Custom rendering]
-Pos=927,346
-Size=1543,1009
-Collapsed=0
-
-[Window][Image]
-Pos=845,278
-Size=1034,241
-Collapsed=0
-
-[Window][Inspector]
-Pos=0,840
-Size=509,1195
+Pos=1415,38
+Size=2425,1997
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Scene]
-Pos=0,38
-Size=509,800
+[Window][Dear ImGui Demo]
+Pos=657,38
+Size=756,1997
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Inspector]
+Pos=0,1127
+Size=655,908
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Example: Documents]
+Pos=335,36
+Size=1042,2029
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X Selected=0xAE7BB42F
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=509,1997 Split=Y Selected=0xF02CD328
-    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=816,800 Selected=0x18B8C0DE
-    DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=816,1195 Selected=0xF02CD328
-  DockNode      ID=0x00000008 Parent=0x3BC79352 SizeRef=3329,1997 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=812,1997 Split=Y Selected=0xE927CF2F
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=817,869 Selected=0xE927CF2F
-      DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=817,1126 Selected=0x94FA6F2C
-    DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=3026,1997 CentralNode=1 Selected=0xAE7BB42F
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=655,1997 Split=Y Selected=0x18B8C0DE
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=219,1087 Selected=0x18B8C0DE
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=219,908 Selected=0xF02CD328
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3183,1997 Split=X Selected=0xAE7BB42F
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=756,1997 Selected=0xE927CF2F
+    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=2425,1997 CentralNode=1 Selected=0xAE7BB42F
 
