Add debug drawing. Add grid. Add settings window

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,7 +5,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=0,38
-Size=677,995
+Size=833,995
 Collapsed=0
 DockId=0x00000004,0
 
@@ -15,20 +15,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=679,38
-Size=3161,1997
+Pos=835,38
+Size=3005,1997
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Dear ImGui Demo]
-Pos=679,38
+Pos=835,38
 Size=739,1997
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Inspector]
 Pos=0,1035
-Size=677,1000
+Size=833,1000
 Collapsed=0
 DockId=0x00000005,0
 
@@ -37,12 +37,17 @@ Pos=335,36
 Size=1042,2029
 Collapsed=0
 
+[Window][Settings]
+Pos=1185,1062
+Size=586,184
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=677,1997 Split=Y Selected=0xF02CD328
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=833,1997 Split=Y Selected=0xF02CD328
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=655,995 Selected=0x18B8C0DE
     DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=655,1000 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3161,1997 Split=X Selected=0xAE7BB42F
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3005,1997 Split=X Selected=0xAE7BB42F
     DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=739,1997 Selected=0xE927CF2F
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=2420,1997 CentralNode=1 Selected=0xAE7BB42F
 
