--- a/imgui.ini
+++ b/imgui.ini
@@ -1,13 +1,14 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2035
+Size=2592,1472
 Collapsed=0
 
 [Window][Scene]
-Pos=0,38
-Size=833,995
+ViewportPos=199,701
+ViewportId=0x18B8C0DE
+Size=462,714
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -15,22 +16,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=835,38
-Size=3005,1997
+Pos=1080,38
+Size=1512,1434
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Dear ImGui Demo]
-Pos=835,38
-Size=739,1997
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Inspector]
-Pos=0,1035
-Size=833,1000
+Pos=464,38
+Size=614,1434
 Collapsed=0
 DockId=0x00000005,0
+
+[Window][Inspector]
+Pos=0,38
+Size=462,1434
+Collapsed=0
+DockId=0x00000002,0
 
 [Window][Example: Documents]
 Pos=335,36
@@ -43,11 +44,10 @@ Size=586,184
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,38 Size=3840,1997 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=833,1997 Split=Y Selected=0xF02CD328
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=655,995 Selected=0x18B8C0DE
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=655,1000 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3005,1997 Split=X Selected=0xAE7BB42F
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=739,1997 Selected=0xE927CF2F
-    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=2420,1997 CentralNode=1 Selected=0xAE7BB42F
+DockNode      ID=0x00000001 Pos=199,701 Size=462,714 Selected=0x18B8C0DE
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=193,123 Size=2592,1434 Split=X
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=684,1997 Selected=0xF02CD328
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=3154,1997 Split=X Selected=0xAE7BB42F
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=614,1042 Selected=0xE927CF2F
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=618,1042 CentralNode=1 Selected=0xAE7BB42F
 
