Add untested physics code

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2035
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,35 +9,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=646,38
-Size=3194,1997
+Pos=472,38
+Size=1448,1042
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=0,978
-Size=644,1057
+Pos=0,529
+Size=470,551
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=646,38
-Size=787,1997
+Pos=324,38
+Size=787,1042
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene]
 Pos=0,38
-Size=644,938
+Size=470,489
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Settings]
+Pos=598,267
+Size=1420,620
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,83 Size=3840,1997 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=644,1997 Split=Y Selected=0xF02CD328
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=796,445 Size=1920,1042 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=470,1997 Split=Y Selected=0xF02CD328
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=913,938 Selected=0x18B8C0DE
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=913,1057 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=3194,1997 Split=X
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1448,1997 Split=X
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=787,1997 Selected=0xE927CF2F
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=2405,1997 CentralNode=1 Selected=0xAE7BB42F
 
