--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "JadeEngine/vendor/GLFW"]
 	path = JadeEngine/vendor/GLFW
 	url = https://github.com/glfw/glfw
+[submodule "JadeEngine/vendor/PhysX"]
+	path = JadeEngine/vendor/PhysX
+	url = https://github.com/NVIDIAGameWorks/PhysX
