Begin to create gizmo system

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -4,45 +4,40 @@ Size=3840,2035
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=3008,747
+Pos=60,60
 Size=400,400
 Collapsed=0
 
 [Window][Game Viewport]
-Pos=1025,42
-Size=2815,1993
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Inspector]
-Pos=0,981
-Size=1023,1054
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Dear ImGui Demo]
-Pos=1025,42
-Size=514,1993
+Pos=0,42
+Size=2729,1993
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Scene]
-Pos=0,42
-Size=1023,937
+[Window][Inspector]
+Pos=2731,1043
+Size=1109,992
 Collapsed=0
 DockId=0x00000003,0
 
-[Window][Settings]
-Pos=1023,203
-Size=890,273
+[Window][Dear ImGui Demo]
+Pos=741,42
+Size=727,1993
 Collapsed=0
+DockId=0x00000005,0
+
+[Window][Scene]
+Pos=2731,42
+Size=1109,999
+Collapsed=0
+DockId=0x00000002,0
 
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,87 Size=3840,1993 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=1023,1997 Split=Y Selected=0xF02CD328
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=913,691 Selected=0x18B8C0DE
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=913,778 Selected=0xF02CD328
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=2815,1997 Split=X Selected=0xAE7BB42F
-    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=514,1038 Selected=0xE927CF2F
-    DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=2299,1038 CentralNode=1 Selected=0xAE7BB42F
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=2729,1993 Split=X
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=727,1997 Selected=0xE927CF2F
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=2370,1997 CentralNode=1 Selected=0xAE7BB42F
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1109,1993 Split=Y Selected=0x18B8C0DE
+    DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=739,999 Selected=0x18B8C0DE
+    DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=739,992 Selected=0xF02CD328
 
