Massive refactor of RenderSystem and RenderBatch
I refactored these so that they are completely decoupled. This means that
I can now use the same method of adding batches for my DebugDrawing. So,
I switched the DebugDraw to use batches instead of one VBO allowing unlimited lines,
and sprites, which will be added very soon.

--- a/JadeEditor/JadeEditor.vcxproj.filters
+++ b/JadeEditor/JadeEditor.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClInclude Include="include\LevelEditorSystem.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="Gizmos.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\LevelEditorScene.cpp">
@@ -24,6 +27,9 @@
       <Filter>cpp</Filter>
     </ClCompile>
     <ClCompile Include="cpp\app.cpp">
+      <Filter>cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Gizmos.cpp">
       <Filter>cpp</Filter>
     </ClCompile>
   </ItemGroup>
