--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -21,8 +21,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=741,42
-Size=727,1993
+Pos=-111,-69
+Size=727,1038
 Collapsed=0
 DockId=0x00000005,0
 
@@ -31,6 +31,11 @@ Pos=2731,42
 Size=1109,999
 Collapsed=0
 DockId=0x00000002,0
+
+[Window][Settings]
+Pos=815,539
+Size=495,214
+Collapsed=0
 
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,87 Size=3840,1993 Split=X
