--- a/JadeEngine/JadeEngine.vcxproj.filters
+++ b/JadeEngine/JadeEngine.vcxproj.filters
@@ -1375,6 +1375,7 @@
     <ClInclude Include="include\jade\file\InputArchive.h" />
     <ClInclude Include="include\jade\file\FileDialog.h" />
     <ClInclude Include="include\jade\renderer\RenderBatch.h" />
+    <ClInclude Include="include\jade\renderer\DebugSprite.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cpp\jade\commands\CommandHistory.cpp">
