Fix horrible debug sprite drawing bug and begin experimenting with gizmos

--- a/JadeEditor/imgui.ini
+++ b/JadeEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=3840,2035
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,25 +10,25 @@ Collapsed=0
 
 [Window][Game Viewport]
 Pos=0,42
-Size=2729,1993
+Size=1364,1038
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Inspector]
-Pos=2731,1043
-Size=1109,992
+Pos=1366,564
+Size=554,516
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=-111,-69
+Pos=0,42
 Size=727,1038
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene]
-Pos=2731,42
-Size=1109,999
+Pos=1366,42
+Size=554,520
 Collapsed=0
 DockId=0x00000002,0
 
@@ -37,11 +37,16 @@ Pos=815,539
 Size=495,214
 Collapsed=0
 
+[Window][Gizmo debug]
+Pos=1066,205
+Size=771,416
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,87 Size=3840,1993 Split=X
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=307,394 Size=1920,1038 Split=X
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=2729,1993 Split=X
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=727,1997 Selected=0xE927CF2F
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=2370,1997 CentralNode=1 Selected=0xAE7BB42F
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=635,1997 CentralNode=1 Selected=0xAE7BB42F
   DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1109,1993 Split=Y Selected=0x18B8C0DE
     DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=739,999 Selected=0x18B8C0DE
     DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=739,992 Selected=0xF02CD328
